# wh-paranoico

./: .gitignore  Makefile  README.md  pyproject.toml
src/: app.py  logger.py
src/ip_whois/: __init__.py
src/process_info/: __init__.py  exceptions.py
src/scripts/: run_app.py
