[tool.poetry]
name = "wh-paranoico"
version = "0.1.7"
description = "App scans running processes for active connections and provides information about connections."
authors = ["WHamster <whitehamster26@gmail.com>"]
packages = [
    { include = "src" },
]

[tool.poetry.dependencies]
python = "^3.8"
ipwhois = "^1.2.0"
psutil = "^5.8.0"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"

[tool.poetry.scripts]
wh-paranoico = 'src.scripts.run_app:main'

[[tool.poetry.source]]
name = "whitehamster26_paranoico"
url = "https://test.pypi.org/legacy/"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
